Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/typeargs/Metharg1.out
Metharg1.java:33:13: compiler.err.cant.apply.symbol: kindname.method, f, K, java.lang.String, kindname.class, T<X>, (compiler.misc.no.conforming.assignment.exists: (compiler.misc.inconvertible.types: java.lang.String, java.lang.Integer))
1 error
